--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <nav>
+    <h2 class="logo">design better</h2>
+    <ul class="navigation">
+      <li>design maturity model</li>
+      <li>books</li>
+      <li>pdocast</li>
+      <li>workshops</li>
+      <li>conversations</li>
+    </ul>
+    <ul>
+      <li>subscribe</li>
+      <li>in</li>
+    </ul>
+  </nav>
+  <div class="hero">
+    <div class="hero-text">
+      <h1>Design maturity</h1>
+      <h1>redefined</h1>
+      <p>Read this new industry-spanning report to learn how to design powers business liftoff.</p>
+      <button>view the report</button>
+    </div>
+  </div>
+  <div class="parent">
+  <div class="image"></div>
+  <div class="owl-text">
+    <h1>Best practices for better design</h1>
+    <p>Design Better provides unprecedented access to the insights that power the world's best design teams.</p>
+  </div>
+  </div>
+  <div class="clients">
+    <ul>
+      <li>airbnb</li>
+      <li>Google</li>
+      <li>Pintrest</li>
+      <li>indeed</li>
+    </ul>
+</div>
 </body>
 </html>
