--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       <li>Pintrest</li>
       <li>indeed</li>
     </ul>
+
+<div class="bookSection">    
+  <p>BOOKS</p>
+  <div class="library"></div>
+  <h3>The library</h3>
+  <p class="second">Essential reading on the practices that propel the best design teams.</p>
 </div>
 </body>
 </html>
