--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="side">
+    <button>T</button>
+    <button>F</button>
+    <button>in</button>
+    <button>?</button>
+  </div>
   <nav>
     <h2 class="logo">design better</h2>
     <ul class="navigation">
@@ -45,8 +51,36 @@
 <div class="bookSection">    
   <p>BOOKS</p>
   <div class="library"></div>
-  <h3>The library</h3>
+  <h2>The library</h2>
   <p class="second">Essential reading on the practices that propel the best design teams.</p>
+</div>
+<div class="page3">
+  <div class="leftElement">
+    <div class="littleBox"></div>
+    <h2>Enterprise</h2>
+    <h2>Design Sprints</h2>
+    <div class="sprintImage"></div>
+  </div>
+  <div class="rightElement">
+    <h1>Enterprise Design Sprints</h1>
+    <p class='author'>By Richard Banfield</p>
+    <p class='paragraph'>A Design Sprint provides a simple, timeboxed problem-solving framework for product teams to get answers quickly and effectively. The exercises embedded in the five phases are designed to reduce politics, increase collaboration across functions and put the focus on answers (outcomes) and not just assets (outputs).  Learn from enterprises like Home Depot, LearnVest, IBM, AARP, Fidelity Investments, Lidl, Blue Cross Blue Shield, and many more, how you can run, facilitate or sponsor your own design sprint and start delivering solutions in organizations of any size.</p>
+    <button>Read the book</button>
+  </div>
+</div>
+<div class="page4">
+  <div class="item">
+    <div class="left">
+      <div class="objectA"></div>
+      <h1>Design OPS</h1>
+      <h1>Handbook</h1>
+      <div class="bottomImage"></div>
+  </div>    
+      <h1>Design OPS Handbook</h1>
+      <p>By Kate Battles, Meredith Black, Dave Malouf, Collin Whitehead, and Gregg Bernstein (editor</p>
+  </div>
+  <div class="center"></div>
+  <div class="right"></div>
 </div>
 </body>
 </html>
